--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,15 @@
       <h1>Secure Employee Portal</h1>
       <nav>
         {% if current_user.id %}
+          <a href="{{ url_for('home') }}">Home</a>
           <a href="{{ url_for('list_employees') }}">List Employees</a>
           <a href="{{ url_for('add_employee') }}">Add Employee</a>
           <a href="{{ url_for('list_pay_raises') }}">List Pay Raises</a>
           <a href="{{ url_for('add_pay_raise') }}">Add Pay Raise</a>
           <a href="{{ url_for('my_pay_raises') }}">Show My Pay Raises</a>
+          {% if current_user.security_level and current_user.security_level <= 2 %}
+            <a href="{{ url_for('submit_delete_payraise') }}">Submit to Delete a Pay Raise</a>
+          {% endif %}
           <a href="{{ url_for('logout') }}">Logout ({{ current_user.name }})</a>
         {% else %}
           <a href="{{ url_for('login') }}">Login</a>
